Add code coverage for test suite

--- a/test/runner.html
+++ b/test/runner.html
@@ -15,7 +15,7 @@
         mocha.ui('bdd');
         </script>
 
-        <script src="../cartier.js"></script>
+        <script src="cartier.instrumented.js"></script>
         <script src="tests.js"></script>
 
         <script>
